// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon when given a number larger than zero renders correctly 1`] = `
<View>
  <Badge
    left={5}
    number={3}
  />
</View>
`;

exports[`Icon when given a number larger than zero renders correctly when static display 1`] = `
<View>
  <Badge
    left={5}
    number={8}
    staticPosition={true}
  />
</View>
`;

exports[`Icon when given zero renders null 1`] = `
<View>
  <Badge
    left={15}
    number={0}
  />
</View>
`;
